--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
+    "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
